--- a/app.wxss
+++ b/app.wxss
@@ -1,3 +1,4 @@
+@import './weui-miniprogram/weui-wxss/dist/style/weui.wxss';
 /**app.wxss**/
 .container {
   height: 100%;
@@ -8,4 +9,5 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 }
-@import 'app-wxa-auto-dark.wxss' 
+@import 'app-wxa-auto-dark.wxss'
+
