--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -16,19 +16,24 @@
 </view>
 
 <view class="page">
-    <view class="page__hd">
-        <view class="page__title">Dialog</view>
-        <view class="page__desc">对话框</view>
-    </view>
     <view class="page__bd">
         <view class="weui-btn-area">
-            <button class="weui-btn" type="default" bindtap="fresh">只有确认按钮</button>
+            <button class="weui-btn" type="default" bindtap="openConfirm">确认取消按钮</button>
+            <button class="weui-btn" type="default" bindtap="tapOneDialogButton">只有确认按钮</button>
         </view>
     </view>
-    <mp-dialog title="已刷新" show="{{showFreshDialog}}" bindbuttontap="fresh" buttons="{{oneButton}}">
-        <view>请点击关闭</view>
+
+    <mp-dialog title="test" show="{{dialogShow}}" bindbuttontap="tapDialogButton" buttons="{{buttons}}">
+        <view>0</view>
+    </mp-dialog>
+    <mp-dialog title="test1" show="{{showOneButtonDialog}}" bindbuttontap="done" buttons="{{oneButton}}">
+        <view>test content1</view>
     </mp-dialog>
 </view>
+
+<view><text class="usermotto">{{motto}}</text></view>
+<button class="weui-btn" type="default" bindtap="changeText">btn测试</button>
+<button class="weui-btn" type="default" bindtap="jumpTo">btn跳转</button>
 
 <text>pages/home.wxml</text>
 <text>helllllllllo</text>
