--- a/pages/SettingPage/settingpage.wxss
+++ b/pages/SettingPage/settingpage.wxss
@@ -34,3 +34,14 @@
   margin: 50px;
 }
 
+.switch1{
+  align-items: center;
+  flex-direction: row;
+  margin: 15px;
+  padding: 5px;
+  background-color: antiquewhite;
+}
+.switch1text{
+  margin-right: 215px;
+}
+
