--- a/pages/SettingPage/settingpage.wxss
+++ b/pages/SettingPage/settingpage.wxss
@@ -1,4 +1,8 @@
 /* pages/SettingPage/settingpage.wxss */
+page{
+  background-color: #F2F1F6
+}
+
 .user{
   display: flex;
   flex-direction: column;
@@ -12,6 +16,7 @@
   height: 40px;
   background-color: antiquewhite;
   margin:5px;
+  
 }
 
 .nickname{
@@ -34,14 +39,51 @@
   margin: 50px;
 }
 
-.switch1{
-  align-items: center;
-  flex-direction: row;
-  margin: 15px;
+.setblock{
+  background-color:#FFFFFF;
+  margin: 20px;
   padding: 5px;
-  background-color: antiquewhite;
-}
-.switch1text{
-  margin-right: 215px;
+  border-radius: 4.5%;
+  box-shadow:0 1rpx 15rpx 1rpx #C4C4C4;
 }
 
+
+.smallListTitle{
+  margin-top: 20px;
+  margin-left: 15px;
+  font-size:12px;
+  color: #C4C4C4;
+}
+
+.switch1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* border-bottom:solid 1px;
+  border-color:#C4C4C4; */
+  align-items: center;
+  flex-direction: row;
+  margin: 10px;
+  padding: 5px;
+  /* background-color: antiquewhite;  */
+  
+  
+}
+.switch1texticon{
+  display: flex;
+  flex-direction: row;
+}
+
+.settext{
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  padding: 5px;
+  /* border-bottom:solid 1px;
+  border-color:#C4C4C4; */
+  color:#F05E1C ;
+}
+
+.blank{
+  /* display: flex; */
+}
