--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,39 +1,58 @@
 <!--pages/home.wxml-->
-<view wx:for="{{list}}">
-  <view>res:连接成功</view>
-  <view>id:{{item.id}}</view>
-  <view>name:{{item.name}}</view>
-  <view>task:{{item.taskname}}</view>
-  <view>done? : {{item.done}}</view>
-</view>
 
-<view wx:for="{{list}}">
-  <view>res:连接成功</view>
-  <view>id:{{item.id}}</view>
-  <view>name:{{item.name}}</view>
-  <view>task:{{item.taskname}}</view>
-  <view>done? : {{item.done}}</view>
-</view>
-
-<view class="page">
-    <view class="page__bd">
-        <view class="weui-btn-area">
-            <button class="weui-btn" type="default" bindtap="openConfirm">确认取消按钮</button>
-            <button class="weui-btn" type="default" bindtap="tapOneDialogButton">只有确认按钮</button>
-        </view>
+<!--搜索页-->
+<view class='page_row' bindtap="searchDetail">
+  <view class="search">
+    <view class="search_arr">
+      <image class="searchcion" src="../../image/search2.png"></image>
+      <input class="sousuo" disabled placeholder="搜索" bindtap='searchDetail'/>
     </view>
-
-    <mp-dialog title="test" show="{{dialogShow}}" bindbuttontap="tapDialogButton" buttons="{{buttons}}">
-        <view>0</view>
-    </mp-dialog>
-    <mp-dialog title="test1" show="{{showOneButtonDialog}}" bindbuttontap="done" buttons="{{oneButton}}">
-        <view>test content1</view>
-    </mp-dialog>
+  </view>
 </view>
 
-<view><text class="usermotto">{{motto}}</text></view>
-<button class="weui-btn" type="default" bindtap="changeText">btn测试</button>
-<button class="weui-btn" type="default" bindtap="jumpTo">btn跳转</button>
+<!--Swiper页-->
+<!--调用Components中的customSwiper imgUrls结合数据库-->
+<custom-swiper imgUrls="{{carouselImgUrls}}" /> 
 
-<text>pages/home.wxml</text>
-<text>helllllllllo</text>
+<!--列表页-->
+<!--模版 结合数据库-->
+<!-- <template name="list">
+  <block wx:for="{{list}}">
+    <view class="item" bindtap="seeDetail">
+      <image src="{{item.img}}" style="width:75px;height:58px;"></image>
+      <view class="desc">
+        <view class="title">{{item.taskname}} </view>
+        <view class="count">
+          <view>{{item.taskdate}}</view>
+          <view class="xinqin">{{item.xinqin}}</view>
+          <view class="riqi"> {{item.riqi}}</view>
+        </view>
+      </view>
+    </view>
+    <view class="hr2"></view>
+  </block>
+</template> -->
+
+
+
+<view class="head">
+  <view>已建列表</view>
+</view>
+
+<block wx:for="{{list}}">
+    <view class="item" bindtap="seeDetail">
+      <image src="{{item.img}}" style="width:75px;height:58px;"></image>
+      <view class="desc">
+        <view class="title">{{item.taskname}} </view>
+        <view class="count">
+          <view>{{item.taskdate}}</view>
+          <view class="xinqin">{{item.xinqin}}</view>
+          <view class="riqi"> {{item.riqi}}</view>
+        </view>
+      </view>
+    </view>
+    <view class="hr2"></view>
+  </block>
+
+
+
