--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,5 @@
 @import './weui-miniprogram/weui-wxss/dist/style/weui.wxss';
+@import './utils/animate.wxss';
 /**app.wxss**/
 .container {
   height: 100%;
