--- a/pages/add/add.wxss
+++ b/pages/add/add.wxss
@@ -1,1 +1,53 @@
 /* pages/add/add.wxss */
+.tab-h{
+    justify-content: center;
+    align-items: center;
+    height: 80rpx;
+    width: 100%; 
+    box-sizing: border-box;
+    overflow: hidden;
+    line-height: 80rpx;
+    background: #FFFFFF; 
+    font-size: 18px; 
+    white-space:nowrap;
+    position: fixed;
+    top: 0; 
+    left: 0;
+    z-index: 99;
+    
+}
+.tab-item{
+    
+    margin:0 36rpx;
+    display: inline-block;
+    
+  }
+.tab-item.active{
+  color: #F05E1C;
+  position: relative;
+  font-size: 25px; 
+}
+.tab-item.active:after{ 
+  content: "";
+  display: block;
+  height: 8rpx;
+  width: 90rpx;
+  background: #F05E1C;
+  position: absolute; 
+  bottom: 0;
+  left: 5rpx;
+  border-radius: 16rpx;
+}
+.tab-content{
+  margin-top: 100rpx;
+}
+.scoll-h{
+  height: 80%;
+}
+
+.weui-input{
+  border: solid;
+  border-radius: 16rpx;
+  margin: 10px;
+  font-size: 20px;
+}
