--- a/pages/add/add.wxss
+++ b/pages/add/add.wxss
@@ -1,7 +1,6 @@
 /* pages/add/add.wxss */
 .tab-h{
-    justify-content: center;
-    align-items: center;
+    
     height: 80rpx;
     width: 100%; 
     box-sizing: border-box;
@@ -50,4 +49,14 @@
   border-radius: 16rpx;
   margin: 10px;
   font-size: 20px;
+}
+.sectiondate{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline
+}
+.blank1{
+  margin-left: 20px;
+  margin-right: 20px;
 }
