--- a/pages/add/add.wxss
+++ b/pages/add/add.wxss
@@ -96,3 +96,17 @@
   background-color:#EB7E4C;
   color: white;
 }
+.btn2{
+  /* background-color:#EB7E4C; */
+  border: solid;
+  color: #EB7E4C;
+}
+.weui-inputflow{
+  border: solid;
+  border-radius: 16rpx;
+  margin: 15px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  height: 100px;
+  
+}
