--- a/pages/flow/flow.wxss
+++ b/pages/flow/flow.wxss
@@ -1,112 +1,4 @@
-/**home.wxss**/
-/*主页*/
-page{
-  height: 80%;
-}
-/*搜索页*/
-.search{
-  width: 98%;
-}
-.search_arr {
-  border: 1px solid #d0d0d0;
-  border-radius: 10rpx;
-  margin-left: 20rpx;
-}
-
-.search_arr input{
-  margin-left: 60rpx;
-  height: 60rpx;
-  border-radius: 5px;
-}
-.sousuo {
-  padding-left: 38%;
-  width: 15%;
-  line-height: 150%;
-  text-align: center;
-}
-.page_row{
-  display: flex;
-  flex-direction: row
-}
-.searchcion {
-  margin: 10rpx 10rpx 10rpx 10rpx;
-  position: absolute;
-  margin-left:38%;
-  z-index: 2;
-  width: 15px;
-  height: 15px;
-  text-align: center;
-    }
-
-
-
-/*列表页*/
-.nav{
-  display: flex;
-  flex-direction: row;
-  text-align:center
-}
-.nav-item{
-  width: 25%;
-  margin-top:20px;
-  font-size: 12px;
-}
-.hr{
-  height: 5px;
-  background-color: #cccccc;
-  margin-top: 10px;
-  opacity: 0.2
-}
-.head{
-  display: flex;
-  flex-direction: row;
-  margin: 10px;
-  font-size: 13px;
-  color: #999999
-}
-.right{
-  position: absolute;
-  right: 10px;
-  color: #cccccc
-}
-.hr2{
-  height: 2px;
-  background-color: #cccccc;
-  opacity: 0.2;
-}
-.item{
-  display: flex;
-  flex-direction: row;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-.desc{
-  margin-left: 20px;
-  line-height: 30px;
-}
-.leirong{
-  font-weight: bold;
-}
-.count{
-  display: flex;
-  flex-direction: row;
-  font-size: 12px;
-  color: #999999
-}
-.xinqin{
-  position: absolute;
-  right: 50px;
-}
-.riqi{
-  position: absolute;
-  right: 10px;
-}
-
-
-
-
-
-/* 第二版主界面list显示部件 */
+/* pages/flow/flow.wxss */
 .list-page{
   display: flex;
   flex-direction: column;
